# workers-rs-mcp

./: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: check.yml  main.yml
mcp/: tools.json
src/: lib.rs
