[package]
name = "workers-rs-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Martin <25009432+tinybeachthor@users.noreply.github.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3.3"
mcpserver = "0.3.1"
uuid = { version = "1.22.0", features = ["v4"] }
